--- a/css/intro.scss
+++ b/css/intro.scss
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     background: rgba(0,0,0,0.4);
-      @include tablets {
+      @include desktops {
         @include coverBG();
         background-image: url(../images/training-bg.jpg);
         position: relative;
