--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -74,7 +74,7 @@
             }
         }
         &.darker-blue-bg {
-          background: #8B8EEA;
+          background: #999;
         }
         &.search-toggle {
           padding-top: 15px;
