--- a/css/all.css
+++ b/css/all.css
@@ -3936,7 +3936,7 @@ form {
     -webkit-border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
     border-radius: 5px 5px 0 0;
-    padding-bottom: 20px;
+    padding: 10px 20px;
     -webkit-box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5); }
@@ -3950,12 +3950,10 @@ form {
       display: block;
       z-index: 99; }
     #slideDisplayWindow > div header {
-      padding: 10px;
-      border-bottom: 2px solid #eaeaea;
-      text-align: center;
       text-transform: uppercase; }
+      #slideDisplayWindow > div header h3 {
+        font-weight: bold; }
     #slideDisplayWindow > div footer {
-      text-align: center;
       margin-top: 20px; }
       #slideDisplayWindow > div footer a {
         display: block; }
