--- a/css/all.scss
+++ b/css/all.scss
@@ -368,7 +368,7 @@ form {
   //max-height: 400px;
   > div {
     @include border-radius(5px 5px 0 0);
-    padding-bottom: 20px;
+    padding: 10px 20px;
     @include box-shadow(1px 2px 2px 2px , rgba(0,0,0,0.5));
     .closePopup {
       @include font-size(30px);
@@ -380,13 +380,12 @@ form {
       z-index: 99;
     }
     header {
-      padding: 10px;
-      border-bottom: 2px solid #eaeaea;
-      text-align: center;
       text-transform: uppercase;
+        h3 {
+          font-weight: bold;
+        }
     }
     footer {
-      text-align: center;
       margin-top: 20px;
         a {
           display: block;
