--- a/css/all.css
+++ b/css/all.css
@@ -3936,7 +3936,7 @@ form {
     -webkit-border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
     border-radius: 5px 5px 0 0;
-    padding: 10px 20px;
+    padding: 20px 35px 5px;
     -webkit-box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.5); }
