--- a/css/all.css
+++ b/css/all.css
@@ -3874,26 +3874,23 @@ button:active {
     background: #fff;
     display: none;
     position: absolute;
-    left: 15px;
+    left: 30px;
     right: 15px;
     top: 100%;
     -webkit-box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
     -moz-box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
     box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
-    z-index: 9; }
-    .select-menu .select-options ul {
-      list-style: none;
-      padding-left: 0;
-      margin: 0; }
-      .select-menu .select-options ul li {
-        cursor: pointer; }
-        .select-menu .select-options ul li:last-child {
-          border-bottom: 0; }
-        .select-menu .select-options ul li:hover {
-          background: #eaeaea; }
-        .select-menu .select-options ul li a {
-          display: block;
-          padding: 8px; }
+    z-index: 9;
+    overflow-y: auto; }
+    .select-menu .select-options li {
+      cursor: pointer; }
+      .select-menu .select-options li:last-child {
+        border-bottom: 0; }
+      .select-menu .select-options li:hover {
+        background: #eaeaea; }
+      .select-menu .select-options li a {
+        display: block;
+        padding: 2px 8px; }
 
 form {
   width: 100%; }
