--- a/css/all.scss
+++ b/css/all.scss
@@ -298,28 +298,24 @@ button:active {
     background:#fff;
     display: none;
     position: absolute;
-    left: 15px;
-    right: 15px;
+    left: 30px;
+    right: 30px;
     top: 100%;
     @include box-shadow(0px 1px 4px 4px, rgba(68,174,234,0.1));
     z-index: 9;
-      ul {
-        list-style: none;
-        padding-left: 0;
-        margin: 0;
-        li {
-          cursor: pointer;
-          &:last-child {
-            border-bottom: 0;
-          }
-          &:hover {
-            background: #eaeaea;
-          }
-            a {
-              display: block;
-              padding: 8px;
-            }
+    overflow-y: auto;
+      li {
+        cursor: pointer;
+        &:last-child {
+          border-bottom: 0;
         }
+        &:hover {
+          background: #eaeaea;
+        }
+          a {
+            display: block;
+            padding: 2px 8px;
+          }
       }
   }
 }
