--- a/css/blog.scss
+++ b/css/blog.scss
@@ -204,7 +204,8 @@
   left: 0;
   right: 0;
   z-index: 99;
-  background: rgba(0,0,0,0.3);
+  background: rgba(255,255,255,1);
+  padding: 10px 0;
 }
 
 .contact-curator {
