--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -112,8 +112,7 @@
       border-right: 0;
     }
     header {
-      margin-top: 20px;
-      height: 100px;
+      margin-top: 0;
       /*h2 {
         color: #333;
         text-align: center;
