--- a/css/blog.scss
+++ b/css/blog.scss
@@ -126,6 +126,9 @@
   margin-top: 15px;
   padding-top: 15px;
   border-top: 1px solid #eaeaea;
+    a {
+      text-decoration: underline;
+    }
 }
 
 
