--- a/css/carousel_gallery.scss
+++ b/css/carousel_gallery.scss
@@ -78,7 +78,7 @@
       height: 175px;
       overflow: hidden;
         @include tablets {
-          height: 100px;
+          //height: 100px;      
         }
     }
   }
