--- a/css/all.css
+++ b/css/all.css
@@ -3638,7 +3638,8 @@ a, button {
   a:focus, a:active, a:visited, button:focus, button:active, button:visited {
     color: inherit;
     border: 0;
-    outline: none; }
+    outline: none;
+    background: inherit; }
 
 p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
   color: #ea5a3a;
