--- a/css/all.css
+++ b/css/all.css
@@ -3639,7 +3639,7 @@ a, button {
     color: inherit;
     border: 0;
     outline: none;
-    background: inherit; }
+    background: inherit !important; }
 
 p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
   color: #ea5a3a;
