another fix for active button

--- a/css/all.css
+++ b/css/all.css
@@ -430,6 +430,9 @@ Extenders
       -moz-border-radius: 0 0 2px 2px;
       border-radius: 0 0 2px 2px; }
 
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background: #44aeea; }
+
 .vjs-default-skin {
   color: #ccc; }
 
@@ -3638,8 +3641,7 @@ a, button {
   a:focus, a:active, a:visited, button:focus, button:active, button:visited {
     color: inherit;
     border: 0;
-    outline: none;
-    background: inherit !important; }
+    outline: none; }
 
 p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
   color: #ea5a3a;
