remove blue background on nav

--- a/css/all.css
+++ b/css/all.css
@@ -409,7 +409,6 @@ Extenders
     background: #fff; }
 
 .navbar-toggle {
-  background: #44aeea;
   border: 0;
   margin: 0;
   padding-left: 25px;
@@ -429,9 +428,6 @@ Extenders
       -webkit-border-radius: 0 0 2px 2px;
       -moz-border-radius: 0 0 2px 2px;
       border-radius: 0 0 2px 2px; }
-
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background: #44aeea; }
 
 .vjs-default-skin {
   color: #ccc; }
@@ -3641,7 +3637,8 @@ a, button {
   a:focus, a:active, a:visited, button:focus, button:active, button:visited {
     color: inherit;
     border: 0;
-    outline: none; }
+    outline: none;
+    background: inherit !important; }
 
 p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
   color: #ea5a3a;
