--- a/css/all.scss
+++ b/css/all.scss
@@ -36,6 +36,7 @@ a, button {
     color: inherit;
     border: 0;
     outline: none;
+    background: inherit!important;
   }     
 }
 p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
