--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -105,7 +105,7 @@
     }
 }
 .navbar-toggle {
-  background: $gsBlue;
+  //background: $gsBlue;
   border: 0;
   margin: 0;
   padding-left: 25px;
@@ -123,9 +123,4 @@
       }
   }
 }
-
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background: $gsBlue;
-}
-
 
