--- a/css/all.css
+++ b/css/all.css
@@ -1432,6 +1432,9 @@ body.vjs-full-window {
 .single-column-section {
   position: relative; }
 
+.page-section {
+  margin-top: 30px; }
+
 #petition-wrap {
   color: #333; }
 
