Social on inspiration sectoin

--- a/css/sections.scss
+++ b/css/sections.scss
@@ -217,6 +217,9 @@
 
 .in-section-social {
   padding: 0!important;
+    .gs-btn {
+      line-height: inherit;       
+    }
 }
 .single-column-section {
   position: relative;
