--- a/css/all.css
+++ b/css/all.css
@@ -1423,6 +1423,8 @@ body.vjs-full-window {
 
 .in-section-social {
   padding: 0 !important; }
+  .in-section-social .gs-btn {
+    line-height: inherit; }
 
 .single-column-section {
   position: relative; }
