--- a/css/sections.scss
+++ b/css/sections.scss
@@ -218,7 +218,7 @@
 .in-section-social {
   padding: 0!important;
     .gs-btn {
-      line-height: inherit;       
+      line-height: 1;         
     }
 }
 .single-column-section {
