--- a/css/all.css
+++ b/css/all.css
@@ -1423,8 +1423,19 @@ body.vjs-full-window {
 
 .in-section-social {
   padding: 0 !important; }
-  .in-section-social .gs-btn {
-    line-height: 1; }
+  .in-section-social > div, .in-section-social button {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: border; }
 
 .single-column-section {
   position: relative; }
