--- a/css/sections.scss
+++ b/css/sections.scss
@@ -217,8 +217,17 @@
 
 .in-section-social {
   padding: 0!important;
-    .gs-btn {
-      line-height: 1;         
+    > div, button {
+      @include border-radius(0);
+      display: inline-block;
+      padding: 6px 12px;
+      margin-bottom: 0;
+      font-size: 14px;
+      font-weight: 400;
+      text-align: center;
+      white-space: nowrap;
+      vertical-align: middle;
+      cursor: border;
     }
 }
 .single-column-section {
