--- a/css/sections.scss
+++ b/css/sections.scss
@@ -217,17 +217,9 @@
 
 .in-section-social {
   padding: 0!important;
-    > div, button {
-      @include border-radius(0);
-      display: inline-block;
-      padding: 6px 12px;
-      margin-bottom: 0;
-      font-size: 14px;
-      font-weight: 400;
-      text-align: center;
-      white-space: nowrap;
-      vertical-align: middle;
-      cursor: border;
+    .gs-btn {
+      padding-left: 2px;
+      padding-right: 0;
     }
 }
 .single-column-section {
