final fix for buttons on inspiration page

--- a/css/sections.scss
+++ b/css/sections.scss
@@ -24,6 +24,9 @@
           @include flexAlignItems(center);
           @include flexwrap(wrap);
         }
+        .section-left-column {
+          min-height: 50px; 
+        }
     }
     .gs-btn {
       margin-top: 25px;
