--- a/css/all.css
+++ b/css/all.css
@@ -1266,6 +1266,8 @@ body.vjs-full-window {
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
+  .content-section .section-template .section-left-column {
+    min-height: 50; }
   .content-section .gs-btn {
     margin-top: 25px; }
   @media only screen and (max-width: 768px) {
