--- a/css/all.css
+++ b/css/all.css
@@ -1425,9 +1425,9 @@ body.vjs-full-window {
 
 .in-section-social {
   padding: 0 !important; }
-  .in-section-social .gs-btn {
-    padding-left: 2px;
-    padding-right: 0; }
+  @media only screen and (max-width: 768px) {
+    .in-section-social .gs-btn {
+      max-width: 160px; } }
 
 .single-column-section {
   position: relative; }
