--- a/css/sections.scss
+++ b/css/sections.scss
@@ -223,6 +223,8 @@
     @include tablets {
       .gs-btn {
         max-width: 160px;
+        padding-left: 0;
+        padding-right: 0; 
       }
     }
 }
