scss preprocessor fuck up

--- a/css/all.css
+++ b/css/all.css
@@ -1439,7 +1439,7 @@ body.vjs-full-window {
 
 .page-section {
   margin-top: 30px;
-  margin-bottom: 50; }
+  margin-bottom: 50px; }
 
 #petition-wrap {
   color: #333; }
