--- a/css/all.scss
+++ b/css/all.scss
@@ -70,7 +70,7 @@ p {
 
 strong {
   font-weight: 900;
-  @include font-size(30px);
+  //@include font-size(30px);
 }
 .gs-btn {
   @include border-radius(0);
