Hamburger menu background color

--- a/css/all.css
+++ b/css/all.css
@@ -429,6 +429,9 @@ Extenders
       -moz-border-radius: 0 0 2px 2px;
       border-radius: 0 0 2px 2px; }
 
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: #44aeea; }
+
 .vjs-default-skin {
   color: #ccc; }
 
