normal state hamburger blue

--- a/css/all.css
+++ b/css/all.css
@@ -409,6 +409,7 @@ Extenders
     background: #fff; }
 
 .navbar-toggle {
+  background: #44aeea;
   border: 0;
   margin: 0;
   padding-left: 25px;
