--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -125,6 +125,6 @@
 }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: none!important;     
+  background-color: transparent!important;
 }
 
