--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -105,7 +105,7 @@
     }
 }
 .navbar-toggle {
-  background: $gsBlue;
+  //background-color: $gsBlue;
   border: 0;
   margin: 0;
   padding-left: 25px;
