Social Link bar background color for hamburger

--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -128,3 +128,9 @@
   background-color: transparent!important;
 }
 
+.social-link-bar {
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: $gsBlue!important;
+  }
+}
+
