--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -129,7 +129,7 @@
 }
 
 .social-link-bar {
-  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus, .navbar-toggle {
     background-color: $gsBlue!important;
   }
 }
