remove and fix overlay for image replacing video

--- a/css/all.css
+++ b/css/all.css
@@ -432,7 +432,7 @@ Extenders
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
   background-color: transparent !important; }
 
-.social-link-bar .navbar-default .navbar-toggle:hover, .social-link-bar .navbar-default .navbar-toggle:focus, .social-link-bar navbar-toggle {
+.social-link-bar .navbar-default .navbar-toggle:hover, .social-link-bar .navbar-default .navbar-toggle:focus, .social-link-bar .navbar-toggle {
   background-color: #44aeea !important; }
 
 .vjs-default-skin {
@@ -1147,6 +1147,7 @@ body.vjs-full-window {
     top: 0;
     left: 0;
     right: 0;
+    height: 100%;
     background: rgba(0, 0, 0, 0.4); }
     @media only screen and (max-width: 992px) {
       #intro-section #hero {
@@ -1160,8 +1161,7 @@ body.vjs-full-window {
         position: relative;
         top: auto;
         left: auto;
-        right: auto;
-        min-height: 400px; } }
+        right: auto; } }
     #intro-section #hero .container {
       display: -webkit-box;
       display: -moz-box;
