--- a/css/intro.scss
+++ b/css/intro.scss
@@ -15,7 +15,6 @@
     top: 0;
     left: 0;
     right: 0;
-    min-height: 100%;
     background: rgba(0,0,0,0.4);
       @include desktops {
         @include coverBG();
@@ -24,6 +23,7 @@
         top: auto;
         left: auto;
         right: auto;
+        min-height: 400px;
       }
       .container {
         @include flexbox;
