--- a/css/all.scss
+++ b/css/all.scss
@@ -1,5 +1,4 @@
-//@import url(http://fonts.googleapis.com/css?family=Lato:300,400,900);
-@import 'glyphs';
+@import '_bootstrap';     
 @import 'variable';
 @import 'mixins';
 @import 'primary-navigation';
