--- a/css/all.css
+++ b/css/all.css
@@ -415,7 +415,9 @@ Extenders
   padding-right: 25px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0; }
+  border-radius: 0;
+  position: absolute;
+  right: 0; }
   .navbar-toggle .icon-bar {
     border: 2px solid #fff;
     width: 32px; }
