--- a/css/all.css
+++ b/css/all.css
@@ -281,15 +281,15 @@ Extenders
   letter-spacing: 0;
   word-spacing: 3px;
   text-shadow: 2px 4px 7px rgba(0, 0, 0, 0.8); }
-  @media only screen and (max-width: 1200px) {
+  @media only screen and (max-width: 11px) {
     #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
       font-size: 70px;
       font-size: 4.375rem; } }
-  @media only screen and (max-width: 992px) {
+  @media only screen and (max-width: 991px) {
     #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
       font-size: 70px;
       font-size: 4.375rem; } }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
       font-size: 50px;
       font-size: 3.125rem;
@@ -298,15 +298,15 @@ Extenders
 #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
   font-size: 40px;
   font-size: 2.5rem; }
-  @media only screen and (max-width: 1200px) {
+  @media only screen and (max-width: 11px) {
     #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
       font-size: 40px;
       font-size: 2.5rem; } }
-  @media only screen and (max-width: 992px) {
+  @media only screen and (max-width: 991px) {
     #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
       font-size: 35px;
       font-size: 2.1875rem; } }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
       font-size: 25px;
       font-size: 1.5625rem; } }
@@ -330,7 +330,7 @@ Extenders
   width: 200px;
   height: 50px;
   margin-top: 5px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     .navbar-brand {
       padding-left: 15px;
       margin-top: 8px; } }
@@ -352,7 +352,7 @@ Extenders
   text-transform: uppercase;
   font-size: 25px;
   font-size: 1.5625rem; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #primary-navigation {
       position: fixed;
       top: 0;
@@ -366,7 +366,7 @@ Extenders
       min-height: 100%; } }
   #primary-navigation ul {
     margin: 0; }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       #primary-navigation ul li {
         float: none;
         width: 100%;
@@ -381,7 +381,7 @@ Extenders
       font-weight: 200; }
       #primary-navigation ul li a:hover {
         color: rgba(255, 255, 255, 0.7); }
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 767px) {
         #primary-navigation ul li a:hover {
           color: #fff; } }
     #primary-navigation ul li.darker-blue-bg {
@@ -415,9 +415,7 @@ Extenders
   padding-right: 25px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0;
-  position: absolute;
-  right: 0; }
+  border-radius: 0; }
   .navbar-toggle .icon-bar {
     border: 2px solid #fff;
     width: 32px; }
@@ -436,10 +434,6 @@ Extenders
 
 .social-link-bar .navbar-default .navbar-toggle:hover, .social-link-bar .navbar-default .navbar-toggle:focus, .social-link-bar .navbar-toggle {
   background-color: #44aeea !important; }
-
-.mobile-menu {
-  width: 100%;
-  position: absolute; }
 
 .vjs-default-skin {
   color: #ccc; }
@@ -1154,7 +1148,7 @@ body.vjs-full-window {
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.4); }
-    @media only screen and (max-width: 992px) {
+    @media only screen and (max-width: 991px) {
       #intro-section #hero {
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -1280,7 +1274,7 @@ body.vjs-full-window {
     flex-wrap: wrap; }
   .content-section .gs-btn {
     margin-top: 25px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     .content-section .top-corner-btn {
       position: static;
       margin-top: 15px;
@@ -1300,15 +1294,15 @@ body.vjs-full-window {
     font-size: 45px;
     font-size: 2.8125rem;
     text-transform: uppercase; }
-    @media only screen and (max-width: 1200px) {
+    @media only screen and (max-width: 11px) {
       .section-breaker h2 {
         font-size: 40px;
         font-size: 2.5rem; } }
-    @media only screen and (max-width: 992px) {
+    @media only screen and (max-width: 991px) {
       .section-breaker h2 {
         font-size: 35px;
         font-size: 2.1875rem; } }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       .section-breaker h2 {
         font-size: 30px;
         font-size: 1.875rem;
@@ -1338,7 +1332,7 @@ body.vjs-full-window {
       bottom: 0; }
   .section-breaker .section-left-column {
     min-height: 50px; }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       .section-breaker .section-left-column .gs-btn {
         padding: 7px 2px; } }
 
@@ -1371,7 +1365,7 @@ body.vjs-full-window {
       font-family: "Titillium Web", sans-serif;
       color: rgba(68, 174, 234, 0.2);
       line-height: 0.5; }
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 767px) {
         #numbered-bg ul li span {
           font-size: 140px;
           font-size: 8.75rem; } }
@@ -1440,7 +1434,7 @@ body.vjs-full-window {
 
 .in-section-social {
   padding: 0 !important; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     .in-section-social .gs-btn {
       max-width: 160px;
       padding-left: 0;
@@ -1467,7 +1461,7 @@ body.vjs-full-window {
   .groundswell-campaigns h3 {
     text-transform: uppercase;
     color: #333; }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       .groundswell-campaigns h3 {
         font-size: 25px;
         font-size: 1.5625rem; } }
@@ -1480,7 +1474,7 @@ body.vjs-full-window {
     cursor: pointer;
     line-height: 1.5;
     border-left: 1px solid black; }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       .groundswell-campaigns #cat-selector {
         margin-top: 14px; } }
     .groundswell-campaigns #cat-selector b {
@@ -1512,7 +1506,7 @@ body.vjs-full-window {
       float: left;
       display: block;
       background: #fff; }
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 767px) {
         .groundswell-campaigns #cat-list li {
           font-size: 16px;
           font-size: 1rem;
@@ -1533,7 +1527,7 @@ body.vjs-full-window {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
     .petition-widget .item h4 {
       margin-top: 0; }
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 767px) {
         .petition-widget .item h4 {
           margin-top: 5px; } }
     .petition-widget .item figure {
@@ -2813,7 +2807,7 @@ body.vjs-full-window {
 
 .single-post-header {
   padding: 75px 0 0; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     .single-post-header {
       padding-bottom: 20px; } }
   .single-post-header h1 {
@@ -2827,7 +2821,7 @@ body.vjs-full-window {
 
 #right-sidebar {
   padding: 90px 15px 40px 15px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #right-sidebar {
       border-top: 1px solid #eaeaea;
       padding-top: 0;
@@ -2953,10 +2947,10 @@ body.vjs-full-window {
   max-width: 16.66%;
   display: block;
   float: left; }
-  @media only screen and (max-width: 992px) {
+  @media only screen and (max-width: 991px) {
     #team-graphic li {
       max-width: 33.33%; } }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #team-graphic li {
       max-width: 50%; } }
   #team-graphic li header {
@@ -3083,7 +3077,7 @@ body.vjs-full-window {
       left: 0;
       right: 0;
       text-align: center; }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
       #stats li {
         top: 48%;
         left: 42%; } }
@@ -3104,7 +3098,7 @@ body.vjs-full-window {
   border-right: 2px solid #ea5a3a;
   padding-bottom: 60px;
   position: relative; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #column-buckets article {
       border-right: 0; } }
   #column-buckets article header {
@@ -3763,7 +3757,7 @@ button:active {
   padding: 0 10px; }
   #back-top:hover {
     background: black; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #back-top {
       font-size: 40px;
       font-size: 2.5rem; } }
@@ -3821,7 +3815,7 @@ button:active {
   background-position: center center;
   background-repeat: no-repeat;
   min-height: 500px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     .coverBG {
       min-height: auto; } }
 
@@ -3864,7 +3858,7 @@ button:active {
 
 #email-subscription {
   padding-top: 5px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 767px) {
     #email-subscription button {
       font-size: 22px;
       font-size: 1.375rem;
