--- a/css/all.css
+++ b/css/all.css
@@ -281,7 +281,7 @@ Extenders
   letter-spacing: 0;
   word-spacing: 3px;
   text-shadow: 2px 4px 7px rgba(0, 0, 0, 0.8); }
-  @media only screen and (max-width: 11px) {
+  @media only screen and (max-width: 1199px) {
     #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
       font-size: 70px;
       font-size: 4.375rem; } }
@@ -298,7 +298,7 @@ Extenders
 #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
   font-size: 40px;
   font-size: 2.5rem; }
-  @media only screen and (max-width: 11px) {
+  @media only screen and (max-width: 1199px) {
     #intro-section #hero .container h2, .page-header h2, .jumbotron h2 {
       font-size: 40px;
       font-size: 2.5rem; } }
@@ -1294,7 +1294,7 @@ body.vjs-full-window {
     font-size: 45px;
     font-size: 2.8125rem;
     text-transform: uppercase; }
-    @media only screen and (max-width: 11px) {
+    @media only screen and (max-width: 1199px) {
       .section-breaker h2 {
         font-size: 40px;
         font-size: 2.5rem; } }
@@ -3579,6 +3579,105 @@ a img.aligncenter {
   width: auto;
   z-index: 100000;
   /* Above WP toolbar. */ }
+
+/* =============================================================================
+  MENU TOGGLE SWITCHES
+============================================================================= */
+/**
+ * Toggle Switch Globals
+ *
+ * All switches should take on the class `cmn-toggle-switch` as well as their
+ * variant that will give them unique properties. This class is an overview
+ * class that acts as a reset for all versions of the icon.
+ */
+.cmn-toggle-switch {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 50px;
+  height: 70px;
+  font-size: 0;
+  text-indent: -9999px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s; }
+
+.cmn-toggle-switch:focus {
+  outline: none; }
+
+.cmn-toggle-switch span {
+  display: block;
+  position: absolute;
+  top: 31px;
+  left: 13px;
+  right: 13px;
+  height: 8px;
+  background: white; }
+
+.cmn-toggle-switch span::before,
+.cmn-toggle-switch span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-color: #fff;
+  content: ""; }
+
+.cmn-toggle-switch span::before {
+  top: -18px; }
+
+.cmn-toggle-switch span::after {
+  bottom: -18px; }
+
+/**
+ * Style 2
+ * 
+ * Hamburger to "x" (htx). Takes on a hamburger shape, bars slide
+ * down to center and transform into an "x".
+ */
+.cmn-toggle-switch__htx {
+  background-color: #44aeea; }
+
+.cmn-toggle-switch__htx span {
+  transition: background 0s 0.3s; }
+
+.cmn-toggle-switch__htx span::before,
+.cmn-toggle-switch__htx span::after {
+  transition-duration: 0.3s, 0.3s;
+  transition-delay: 0.3s, 0s; }
+
+.cmn-toggle-switch__htx span::before {
+  transition-property: top, transform; }
+
+.cmn-toggle-switch__htx span::after {
+  transition-property: bottom, transform; }
+
+/* active state, i.e. menu open */
+.cmn-toggle-switch__htx.active {
+  background-color: #181e49; }
+
+.cmn-toggle-switch__htx.active span {
+  background: none; }
+
+.cmn-toggle-switch__htx.active span::before {
+  top: 0;
+  transform: rotate(45deg); }
+
+.cmn-toggle-switch__htx.active span::after {
+  bottom: 0;
+  transform: rotate(-45deg); }
+
+.cmn-toggle-switch__htx.active span::before,
+.cmn-toggle-switch__htx.active span::after {
+  transition-delay: 0s, 0.3s; }
 
 #footer {
   background: #333;
