--- a/css/all.css
+++ b/css/all.css
@@ -3597,7 +3597,7 @@ a img.aligncenter {
   margin: 0;
   padding: 0;
   width: 50px;
-  height: 70px;
+  height: 50px;
   font-size: 0;
   text-indent: -9999px;
   -webkit-appearance: none;
@@ -3615,10 +3615,10 @@ a img.aligncenter {
 .cmn-toggle-switch span {
   display: block;
   position: absolute;
-  top: 31px;
-  left: 13px;
-  right: 13px;
-  height: 8px;
+  top: 23.5px;
+  left: 15px;
+  right: 15px;
+  height: 3px;
   background: white; }
 
 .cmn-toggle-switch span::before,
@@ -3627,15 +3627,15 @@ a img.aligncenter {
   display: block;
   left: 0;
   width: 100%;
-  height: 8px;
+  height: 3px;
   background-color: #fff;
   content: ""; }
 
 .cmn-toggle-switch span::before {
-  top: -18px; }
+  top: -8.5px; }
 
 .cmn-toggle-switch span::after {
-  bottom: -18px; }
+  bottom: -8.5px; }
 
 /**
  * Style 2
@@ -3644,7 +3644,7 @@ a img.aligncenter {
  * down to center and transform into an "x".
  */
 .cmn-toggle-switch__htx {
-  background-color: #44aeea; }
+  background-color: none; }
 
 .cmn-toggle-switch__htx span {
   transition: background 0s 0.3s; }
