--- a/css/all.css
+++ b/css/all.css
@@ -3594,10 +3594,10 @@ a img.aligncenter {
   display: block;
   position: relative;
   overflow: hidden;
-  margin: 0;
+  margin: 0 10px;
   padding: 0;
   width: 40px;
-  height: 40px;
+  height: 35px;
   font-size: 0;
   text-indent: -9999px;
   -webkit-appearance: none;
@@ -3615,7 +3615,7 @@ a img.aligncenter {
 .cmn-toggle-switch span {
   display: block;
   position: absolute;
-  top: 18px;
+  top: 15.5px;
   left: 2px;
   right: 2px;
   height: 4px;
@@ -3632,10 +3632,10 @@ a img.aligncenter {
   content: ""; }
 
 .cmn-toggle-switch span::before {
-  top: -16px; }
+  top: -13.5px; }
 
 .cmn-toggle-switch span::after {
-  bottom: -16px; }
+  bottom: -13.5px; }
 
 /**
  * Style 2
