--- a/css/toggle.scss
+++ b/css/toggle.scss
@@ -5,10 +5,10 @@
 // vars
 
 $button-width: 40px;
-$button-height: 40px;
+$button-height: 35px;
 $bar-thickness: 4px;
 $button-pad: 2px;
-$button-trans-delay: 0.3s;
+$button-trans-delay: 0.3s;    
 
 /**
  * Toggle Switch Globals
@@ -22,7 +22,7 @@ $button-trans-delay: 0.3s;
   display: block;
   position: relative;
   overflow: hidden;
-  margin: 0;
+  margin: 0 10px;
   padding: 0;
   width: $button-width;
   height: $button-height;
