--- a/css/all.css
+++ b/css/all.css
@@ -3597,7 +3597,7 @@ a img.aligncenter {
   margin: 0 10px;
   padding: 0;
   width: 40px;
-  height: 35px;
+  height: 40px;
   font-size: 0;
   text-indent: -9999px;
   -webkit-appearance: none;
@@ -3605,7 +3605,7 @@ a img.aligncenter {
   appearance: none;
   box-shadow: none;
   border-radius: none;
-  border: none;
+  border: 1px solid #fff;
   cursor: pointer;
   transition: background 0.3s; }
 
@@ -3615,9 +3615,9 @@ a img.aligncenter {
 .cmn-toggle-switch span {
   display: block;
   position: absolute;
-  top: 15.5px;
-  left: 2px;
-  right: 2px;
+  top: 18px;
+  left: 10px;
+  right: 10px;
   height: 4px;
   background: white; }
 
@@ -3632,10 +3632,10 @@ a img.aligncenter {
   content: ""; }
 
 .cmn-toggle-switch span::before {
-  top: -13.5px; }
+  top: -8px; }
 
 .cmn-toggle-switch span::after {
-  bottom: -13.5px; }
+  bottom: -8px; }
 
 /**
  * Style 2
