--- a/css/toggle.scss
+++ b/css/toggle.scss
@@ -5,10 +5,10 @@
 // vars
 
 $button-width: 40px;
-$button-height: 35px;
+$button-height: 40px;
 $bar-thickness: 4px;
-$button-pad: 2px;
-$button-trans-delay: 0.3s;    
+$button-pad: 10px;
+$button-trans-delay: 0.3s;
 
 /**
  * Toggle Switch Globals
@@ -33,7 +33,7 @@ $button-trans-delay: 0.3s;
   appearance: none;
   box-shadow: none;
   border-radius: none;
-  border: none;
+  border: 1px solid #fff; 
   cursor: pointer;
   transition: background $button-trans-delay;
 }
