--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -126,6 +126,7 @@
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
   background-color: transparent!important;
+  border: 1px solid #fff;
 }
 
 .social-link-bar {
